Fix z-index

--- a/src/sass/_problems.scss
+++ b/src/sass/_problems.scss
@@ -73,6 +73,7 @@
   padding: 0;
   position: absolute;
   height: 100%;
+  z-index: 1;
 }
 .problem-slide .select {
   width: 59px;
